# cce

./: .gitignore  AGENTS.md  Cargo.toml  README.md  cce
openspec/: project.md
openspec/changes/archive/2025-10-31-reimplement-in-rust/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-10-31-reimplement-in-rust/specs/cli-interface/: spec.md
openspec/changes/archive/2025-10-31-reimplement-in-rust/specs/command-execution/: spec.md
openspec/changes/archive/2025-10-31-reimplement-in-rust/specs/configuration-loading/: spec.md
openspec/changes/archive/2025-10-31-reimplement-in-rust/specs/environment-management/: spec.md
openspec/changes/archive/2025-11-01-add-fzf-interactive-selection/: proposal.md  tasks.md
openspec/changes/archive/2025-11-01-add-fzf-interactive-selection/specs/cli-interface/: spec.md
openspec/changes/archive/2025-11-03-migrate-to-xdg-config/: proposal.md  tasks.md
openspec/changes/archive/2025-11-20-refactor-exec-replacement/: proposal.md  tasks.md
openspec/changes/archive/2025-11-20-update-shell-source-env-loading/: proposal.md  tasks.md
openspec/changes/migrate-to-xdg-config/specs/configuration-loading/: spec.md
openspec/specs/cli-interface/: spec.md
openspec/specs/command-execution/: spec.md
openspec/specs/configuration-loading/: spec.md
openspec/specs/environment-management/: spec.md
src/: config.rs  error.rs  executor.rs  lib.rs  main.rs  manager.rs
tests/: integration_test.rs  test_shell_features.rs
tests/fixtures/: basic.env  complex.env  with_command.env  with_vars.env
(+2 files in other folders)
