[package]
name = "cce"
version = "2.0.1"
edition = "2021"
authors = ["erning"]
description = "Claude Code Environment Manager - A Rust-based CLI for managing multiple Claude API environments"
license = "MIT"
repository = "https://github.com/erning/cce"
homepage = "https://github.com/erning/cce"
keywords = ["claude", "cli", "environment", "manager"]
categories = ["command-line-utilities"]

[[bin]]
name = "cce"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
dirs = "5.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
